--- a/src/index.haml
+++ b/src/index.haml
@@ -10,172 +10,141 @@
 
     %link{href: "assets/css/application.css", rel: "stylesheet", type: "text/css"}
 
-  %body{layout: "column", layout-fill: true}
-
-    // Header
-    %header
-      %md-toolbar.md-hue-1.md-tall
-        // Header Content
-        .md-toolbar-tools{layout-align: "space-between center", layout: "row"}
-          %span
-            %md-button.md-icon-button
-              %md-icon{md-font-icon: "ion-navicon-round"}
-            %span
-              FRI Timetable
-
-          %span
-            %md-button.md-icon-button
-              %md-icon{md-font-icon: "ion-search"}
-            %md-button.md-icon-button
-              %md-icon{md-font-icon: "ion-calendar"}
+  %body.bb-column
 
     // Content
-    %section#calendar{layout-align: "center", layout: "row"}
-
-      %md-card{flex: 95, flex-gt-md: 90, flex-gt-lg: 80}
-        // Calendar content
-        %md-card-content#calendar-content{layout: "row", layout-fill: true}
-
-          .time-table{flex: 5}
-            .time
-              8 am
-            .time
-              9 am
-            .time
-              10 am
-            .time
-              11 am
-            .time
-              12 pm
-            .time
-              1 pm
-            .time
-              2 pm
-            .time
-              3 pm
-            .time
-              4 pm
-            .time
-              5 pm
-            .time
-              6 pm
-            .time
-              7 pm
-            .time
-              8 pm
-          .days-table{flex: 95, layout: "row", layout-fill: true}
-            .day
-              %h3.head.text-dark-hint
-                Monday
-                %span.date
-                  12.
-              %ul.content
-                %li{color: 1, time: 3}
-                  .data
-                    .name
-                      Računalniška Arhitektura
-                    .location
-                      P01
-                    .teacher
-                      Škraba, Igor
-                %li{time: 9, empty: true}
-                  .data
-            .day
-              %h3.head.text-dark-hint
-                Tuesday
-                %span.date
-                  13.
-              %ul.content
-                %li{time: 3, empty: true}
-                  .data
-                %li{color: 1, time: 3}
-                  .data
-                    .name
-                      Matematika
-                    .location
-                      P01
-                    .teacher
-                      Oblak, Polona
-                %li{time: 6, empty: true}
-                  .data
-            .day
-              %h3.head.text-dark-hint
-                Wednesday
-                %span.date
-                  14.
-              %ul.content
-                %li{color: 1, time: 3}
-                  .data
-                    .name
-                      Programiranje 1
-                    .location
-                      P01
-                    .teacher
-                      Demšar, Janez
-                %li{color: 2, time: 2}
-                  .data
-                    .name
-                      Programiranje 1
-                    .location
-                      PR09
-                    .teacher
-                      Zupanc, Kaja
-                    .teacher
-                      Žbontar, Jure
-                %li{color: 2, time: 2}
-                  .data
-                    .name
-                      Diskretne Strukture
-                    .location
-                      PR09
-                    .teacher
-                      Jerše, Gregor
-                %li{time: 2, empty: true}
-                  .data
-                %li{color: 1, time: 3}
-                  .data
-                    .name
-                      Uvod v Računalništvo
-                    .location
-                      PA
-                    .teacher
-                      Sadikov, Aleksander
-            .day
-              %h3.head.text-dark-hint
-                Thursday
-                %span.date
-                  15.
-              %ul.content
-                %li{time: 5, empty: true}
-                  .data
-                %li{color: 2, time: 2}
-                  .data
-                    .name
-                      Matematika
-                    .location
-                      PR05
-                    .teacher
-                      Vuk, Martin
-                %li{time: 5, empty: true}
-                  .data
-            .day
-              %h3.head.text-dark-hint
-                Friday
-                %span.date
-                  16.
-              %ul.content
-                %li{time: 5, empty: true}
-                  .data
-                %li{color: 1, time: 3}
-                  .data
-                    .name
-                      Diskretne Strukture
-                    .location
-                      P01
-                    .teacher
-                      Fijavž, Gašper
-                %li{time: 4, empty: true}
-                  .data
-
-  %script{src: "assets/js/dependencies.min.js"}
-  %script{src: "assets/js/application.min.js"}
+    #calendar.bb-align-center
+      // Calendar content
+      #calendar-content.card.bb-flex-100.bb-flex-bt-md-90.bb-flex-bt-lg-80.bb-row
+        .time-table.bb-flex-5.bb-column
+          .time
+            8 am
+          .time
+            9 am
+          .time
+            10 am
+          .time
+            11 am
+          .time
+            12 pm
+          .time
+            1 pm
+          .time
+            2 pm
+          .time
+            3 pm
+          .time
+            4 pm
+          .time
+            5 pm
+          .time
+            6 pm
+          .time
+            7 pm
+          .time
+            8 pm
+        .days-table.bb-flex-95.bb-row.bb-fill
+          .day
+            %h3.head.bb-text-dark-hint
+              Monday
+              %span.date
+                12.
+            %ul.content
+              %li{color: 1, time: 3}
+                .data
+                  .name
+                    Računalniška Arhitektura
+                  .location
+                    P01
+                  .teacher
+                    Škraba, Igor
+              %li{time: 9, empty: true}
+          .day
+            %h3.head.bb-text-dark-hint
+              Tuesday
+              %span.date
+                13.
+            %ul.content
+              %li{time: 3, empty: true}
+              %li{color: 1, time: 3}
+                .data
+                  .name
+                    Matematika
+                  .location
+                    P01
+                  .teacher
+                    Oblak, Polona
+              %li{time: 6, empty: true}
+          .day
+            %h3.head.bb-text-dark-hint
+              Wednesday
+              %span.date
+                14.
+            %ul.content
+              %li{color: 1, time: 3}
+                .data
+                  .name
+                    Programiranje 1
+                  .location
+                    P01
+                  .teacher
+                    Demšar, Janez
+              %li{color: 2, time: 2}
+                .data
+                  .name
+                    Programiranje 1
+                  .location
+                    PR09
+                  .teacher
+                    Zupanc, Kaja
+                  .teacher
+                    Žbontar, Jure
+              %li{color: 2, time: 2}
+                .data
+                  .name
+                    Diskretne Strukture
+                  .location
+                    PR09
+                  .teacher
+                    Jerše, Gregor
+              %li{time: 2, empty: true}
+              %li{color: 1, time: 3}
+                .data
+                  .name
+                    Uvod v Računalništvo
+                  .location
+                    PA
+                  .teacher
+                    Sadikov, Aleksander
+          .day
+            %h3.head.bb-text-dark-hint
+              Thursday
+              %span.date
+                15.
+            %ul.content
+              %li{time: 5, empty: true}
+              %li{color: 2, time: 2}
+                .data
+                  .name
+                    Matematika
+                  .location
+                    PR05
+                  .teacher
+                    Vuk, Martin
+              %li{time: 5, empty: true}
+          .day
+            %h3.head.bb-text-dark-hint
+              Friday
+              %span.date
+                16.
+            %ul.content
+              %li{time: 5, empty: true}
+              %li{color: 1, time: 3}
+                .data
+                  .name
+                    Diskretne Strukture
+                  .location
+                    P01
+                  .teacher
+                    Fijavž, Gašper
+              %li{time: 4, empty: true}
