--- a/src/index.haml
+++ b/src/index.haml
@@ -52,9 +52,9 @@
             %ul.content
               %li{color: 1, time: 3}
                 .data
-                  .name
+                  .name.bb-title
                     Računalniška Arhitektura
-                  .location
+                  .location.bb-subhead
                     P01
                   .teacher
                     Škraba, Igor
@@ -68,9 +68,9 @@
               %li{time: 3, empty: true}
               %li{color: 1, time: 3}
                 .data
-                  .name
+                  .name.bb-title
                     Matematika
-                  .location
+                  .location.bb-subhead
                     P01
                   .teacher
                     Oblak, Polona
@@ -83,17 +83,17 @@
             %ul.content
               %li{color: 1, time: 3}
                 .data
-                  .name
+                  .name.bb-title
                     Programiranje 1
-                  .location
+                  .location.bb-subhead
                     P01
                   .teacher
                     Demšar, Janez
               %li{color: 2, time: 2}
                 .data
-                  .name
+                  .name.bb-title
                     Programiranje 1
-                  .location
+                  .location.bb-subhead
                     PR09
                   .teacher
                     Zupanc, Kaja
@@ -101,18 +101,18 @@
                     Žbontar, Jure
               %li{color: 2, time: 2}
                 .data
-                  .name
+                  .name.bb-title
                     Diskretne Strukture
-                  .location
+                  .location.bb-subhead
                     PR09
                   .teacher
                     Jerše, Gregor
               %li{time: 2, empty: true}
               %li{color: 1, time: 3}
                 .data
-                  .name
+                  .name.bb-title
                     Uvod v Računalništvo
-                  .location
+                  .location.bb-subhead
                     PA
                   .teacher
                     Sadikov, Aleksander
@@ -125,9 +125,9 @@
               %li{time: 5, empty: true}
               %li{color: 2, time: 2}
                 .data
-                  .name
+                  .name.bb-title
                     Matematika
-                  .location
+                  .location.bb-subhead
                     PR05
                   .teacher
                     Vuk, Martin
@@ -141,9 +141,9 @@
               %li{time: 5, empty: true}
               %li{color: 1, time: 3}
                 .data
-                  .name
+                  .name.bb-title
                     Diskretne Strukture
-                  .location
+                  .location.bb-subhead
                     P01
                   .teacher
                     Fijavž, Gašper
