--- a/src/css/partials.sass
+++ b/src/css/partials.sass
@@ -1,4 +1,5 @@
 .card
+  // Can be raplaced by Material-design framework of your choice if you wish
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12)
   background-color: #FFF
   border-radius: 2px
