--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,6 +1,8 @@
-$color-primary: $palette-red-500 !default;
-$color-primary-dark: $palette-red-700 !default;
-$color-accent: $palette-blue-grey-500 !default;
-$color-accent-dark: $palette-blue-grey-700 !default;
-$color-primary-contrast: $color-dark-contrast !default;
-$color-accent-contrast: $color-dark-contrast !default;
+$color-primary: $palette-red-500;
+$color-primary-dark: $palette-red-700;
+$color-accent: $palette-blue-grey-500;
+$color-accent-dark: $palette-blue-grey-700;
+$color-primary-contrast: $color-dark-contrast;
+$color-accent-contrast: $color-dark-contrast;
+
+$appbar-color: $color-primary;
