--- a/src/containers/app-bar/style.scss
+++ b/src/containers/app-bar/style.scss
@@ -1,9 +1,16 @@
-@import "~react-toolbox/lib/globals";
-@import "~react-toolbox/lib/app_bar/config";
+.container {
+    height: 4.8rem;
+}
 
 .header {
     height: 4.8rem;
     padding: 0 0.6rem;
+    
+    position: fixed;
+    
+    top: 0;
+    left: 0;
+    right: 0;
     
     h1 {
         font-size: 2rem;
@@ -15,7 +22,11 @@
     }
 }
 
-@media (min-width: $layout-breakpoint-lg-tablet) {
+@media (min-width: $desktop-breakpoint) {
+    .container {
+        height: 6.4rem;
+    }
+    
     .header {
         height: 6.4rem;
         padding: 0 2.4rem;
@@ -23,7 +34,7 @@
         .menu {
             margin-right: 2rem;
             
-            span {
+            :global(.material-icons) {
                 font-size: 2.4rem;
             }
         }
