--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,3 +1,5 @@
+@import "~react-toolbox/lib/globals";
+
 $color-primary: $palette-red-500;
 $color-primary-dark: $palette-red-700;
 $color-accent: $palette-blue-grey-500;
@@ -6,3 +8,5 @@ $color-primary-contrast: $color-dark-contrast;
 $color-accent-contrast: $color-dark-contrast;
 
 $appbar-color: $color-primary;
+
+$desktop-breakpoint: $layout-breakpoint-lg-tablet;
