--- a/src/layouts/Root/style.scss
+++ b/src/layouts/Root/style.scss
@@ -8,7 +8,7 @@
     min-height: 100vh;
 }
 
-.layout .wrapper {
+.wrapper {
     width: 100%;
     max-width: $desktop-breakpoint;
     
@@ -17,7 +17,7 @@
 }
 
 @media (min-width: $desktop-breakpoint) {
-    .layout .wrapper {
+    .wrapper {
         padding: 0;
     }
 }
