feat(cards): improve content padding

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -10,4 +10,7 @@ $color-accent-contrast: $color-dark-contrast;
 
 $appbar-color: $color-primary;
 
+$small-margin: 8px;
+$large-margin: 16px;
+
 $desktop-breakpoint: $layout-breakpoint-lg-tablet;
