--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -1,5 +1,9 @@
 div.card {
-    margin: 0.8rem 0;
+    margin: $small-margin 0;
+}
+
+div.cardText {
+    padding-bottom: 0;
 }
 
 div.cardActions {
@@ -8,6 +12,6 @@ div.cardActions {
 
 @media (min-width: $desktop-breakpoint) {
     div.card {
-        margin: 1.6rem 0;
+        margin: $large-margin 0;
     }
 }
