fix(root): ensure content padding near breakpoint

--- a/src/layouts/Root/style.scss
+++ b/src/layouts/Root/style.scss
@@ -13,11 +13,5 @@
     max-width: $desktop-breakpoint;
     
     margin: 0 auto;
-    padding: 0 0.8rem;
-}
-
-@media (min-width: $desktop-breakpoint) {
-    .wrapper {
-        padding: 0;
-    }
+    padding: 0 $small-margin;
 }
