feat(schedule): add schedule view

--- a/src/components/Allocation/_config.scss
+++ b/src/components/Allocation/_config.scss
@@ -1,2 +1,2 @@
-$base-height: 80px;
-$full-height: $base-height + $large-margin;
+$allocation-base-height: 80px;
+$allocation-height: $allocation-base-height + $large-margin;
