--- a/src/components/Schedule/style.scss
+++ b/src/components/Schedule/style.scss
@@ -23,15 +23,19 @@
 // Tabs
 
 .tabs {
+    position: fixed !important;
+    left: 0;
+    right: 0;
+    
     // AppBar's box shadow
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+    box-shadow: 0 2px 5px -1px rgba(0, 0, 0, 0.26);
+    
+    // Move above AppBar's original box shadow
+    z-index: $z-index-high;
     
     .navigation {
         background: $color-primary;
         box-shadow: none;
-        
-        // Move above AppBar's original box shadow
-        z-index: $z-index-high;
         
         .label {
             width: 20%;
@@ -50,6 +54,10 @@
         
         z-index: $z-index-high;
     }
+}
+
+.tabContent {
+    padding-top: 48px;
 }
 
 // Desktop
